fix: wrap app.viam.com link in anchor tag

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -1233,6 +1233,10 @@ td > ul, td > ol {
   color: #282829;
 }
 
+#navsearch > #appButton a {
+  color: #282829;
+}
+
 #navsearch > #appButton > span > span > i {
   color: #9C9CA4;
 }
